# stitch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml  publish.yml  release.yml
ci/: check.sh
docs/: DEVELOPING.md
fg-stitch-cli/: Cargo.toml
fg-stitch-cli/src/: main.rs
fg-stitch-cli/src/commands/: align.rs
fg-stitch-lib/: Cargo.toml
fg-stitch-lib/src/align/: alignment.rs  io.rs  sub_alignment.rs
fg-stitch-lib/src/align/aligners/: constants.rs  mod.rs  multi_contig_aligner.rs  single_contig_aligner.rs
fg-stitch-lib/src/align/traceback/: mod.rs  packed_length_cell.rs  simple_cell.rs
fg-stitch-lib/src/util/: io.rs  mod.rs  tag.rs
fqcv-cli/: Cargo.toml
fqcv-cli/src/: main.rs
fqcv-cli/src/commands/: align.rs  command.rs  mod.rs
fqcv-lib/: Cargo.toml
fqcv-lib/src/: lib.rs
fqcv-lib/src/align/: mod.rs  scoring.rs
fqcv-lib/src/align/aligners/: constants.rs  mod.rs  single_contig_aligner.rs
fqcv-lib/src/align/traceback/: packed_length_cell.rs  simple_cell.rs
fqcv-lib/src/util/: dna.rs  target_seq.rs  version.rs
src/: main.rs
src/lib/: alignment.rs  io.rs  mod.rs  opts.rs  pairwise.rs  run.rs  target_seq.rs  util.rs
src/lib/align/: alignment.rs  io.rs  mod.rs  scoring.rs  sub_alignment.rs
src/lib/align/aligners/: constants.rs  double_strand.rs  mod.rs  multi_contig_aligner.rs  single_contig_aligner.rs  single_strand.rs  x_buffer.rs
src/lib/align/traceback/: cell.rs  mod.rs  packed_length_cell.rs  simple_cell.rs
src/lib/alignment/: aligners.rs  constants.rs  double_strand.rs  mod.rs  pairwise.rs  scoring.rs  single_strand.rs  sub_alignment.rs  traceback.rs  x_buffer.rs
src/lib/alignment/traceback/: cell.rs  mod.rs  packed_length_cell.rs  simple_cell.rs
src/lib/commands/: align.rs  mod.rs
src/lib/util/: index_map.rs  mod.rs  target_seq.rs  version.rs
