[workspace]
members = ["fg-stitch-lib", "fg-stitch-cli"]
resolver = "2"

[workspace.package]
authors = ["Fulcrum Genomics LLC"]
edition = "2021"
license = "MIT"
repository = "https://github.com/fulcrumgenomics/fg-stitch"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.75"
flume = "0.10.14"
itertools = "0.10.5"
noodles = { version = "0.37.0", features = ["core", "bgzf", "sam", "bam"] }

[profile.release]
debug = true
