[workspace]
members = ["fg-stitch-lib", "fg-stitch-cli"]
resolver = "2"

[workspace.package]
authors = ["Fulcrum Genomics LLC"]
categories = ["science"]
documentation = "https://github.com/fulcrumgenomics/stitch"
edition = "2021"
keywords = ["genomics", "bioinformatics", "sequencing", "alignment"]
license = "MIT"
repository = "https://github.com/fulcrumgenomics/stitch"
rust-version = "1.64"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.75"
flume = "0.10.14"
itertools = "0.10.5"
noodles = { version = "0.37.0", features = ["core", "bgzf", "sam", "bam"] }

[profile.release]
debug = true
