[workspace]
members = ["fg-stitch-lib", "fg-stitch-cli"]
resolver = "2"

[workspace.package]
authors = ["Fulcrum Genomics LLC"]
categories = ["science"]
documentation = "https://github.com/fulcrumgenomics/stitch"
edition = "2021"
keywords = ["genomics", "bioinformatics", "sequencing", "alignment"]
license = "MIT"
repository = "https://github.com/fulcrumgenomics/stitch"
rust-version = "1.64"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.75"
flume = "0.10.14"
itertools = "0.10.5"
noodles = { version = "0.37.0", features = ["core", "bgzf", "sam", "bam"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Whether cargo-dist should create a Github Release or use an existing draft
create-release = false
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

[profile.release]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
