[package]
name = "fg-stitch"
description = "Stitch is an aligner for long reads against one or more reference/expected vector/plasmid/construct(s)."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "stitch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.2.7", features = ["derive", "string"] }
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
flume.workspace = true
stitch = { path = "../fg-stitch-lib", package = "fg-stitch-lib" }
itertools.workspace = true
log = "0.4.17"
noodles.workspace = true
proglog = { version = "0.3.0", features = ["pretty_counts"] }
