[package]
name = "fqcv-lib"
description = "FQCV aligner implementation and supporting utilities."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
low_mem = []

[dependencies]
anyhow.workspace = true
bio = "1.1.0"
bit-set = "0.5.3"
cfg-if = "1.0.0"
derive-getters = "0.3.0"
derive_builder = "0.12.0"
fgoxide = "0.3.0"
flate2 = "1.0.26"
flume.workspace = true
itertools.workspace = true
lazy_static = "1.4.0"
noodles.workspace = true
num_cpus = "1.15.0"
seq_io = "0.3.1"
serde = "1.0.162"

[build-dependencies]
built = { version = "0.6.0", features = ["git2"] }

[dev-dependencies]
rstest = "0.17.0"
